--- a/layout.templ
+++ b/layout.templ
@@ -6,10 +6,12 @@ templ Layout(title string) {
 		<head>
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
+			<link href="/static/style.css" rel="stylesheet"/>
 			<title>{ title }</title>
 		</head>
 		<body>
 			{ children... }
+			<script type="text/javascript" src="/static/main.js"></script>
 		</body>
 	</html>
 }
