--- a/frontend/src/fonts/font.css
+++ b/frontend/src/fonts/font.css
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/static/Poppins-Regular.ttf") format("truetype");
+  src: url("./Poppins-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -19,5 +19,5 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("/static/Poppins-Medium.ttf") format("truetype");
+  src: url("./Poppins-Medium.ttf") format("truetype");
 }
