--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,3 @@
-@import url(/static/font.css);
-
 * {
   margin: 0;
   padding: 0;
@@ -67,7 +65,7 @@ form p {
 
 section .row {
   margin-bottom: 10px;
-  background: #E9F0FFF;
+  background: #e9f0ff;
   list-style: none;
   padding: 15px 20px;
   border-radius: 5px;
@@ -143,4 +141,8 @@ section .details span {
 
 .uploaded-area i.fa-check {
   font-size: 16px;
+}
+
+.icon__upload {
+  width: 2em;
 }
