--- a/templates/home.templ
+++ b/templates/home.templ
@@ -1,16 +1,20 @@
-package main
+package templates
 
-templ Hello(name string) {
-	@Layout("RubensDEV's File Uploader") {
+templ Home() {
+	{{ mm := ctx.Value(manifestManagerCtx).(*ManifestManager) }}
+	@RootLayout("RubensDEV's File Uploader") {
 		<div class="wrapper">
 			<header>File Uploader</header>
 			<form action="#">
 				<input class="file-input" type="file" name="image" hidden/>
-				<img src="/static/upload.svg"/>
+				<img class="icon__upload" src={ mm.GetAsset("src/svg/upload.svg") }/>
 				<p>Browse File to Upload</p>
 			</form>
 			<section class="progress-area"></section>
 			<section class="uploaded-area"></section>
+			<div x-data="{label: 'Hello world from AlpineJS!'}">
+				<span x-text="label"></span>
+			</div>
 		</div>
 		// <form method="POST" action="/upload" enctype="multipart/form-data">
 		// 	<input name="image" type="file"/>
