--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,12 +1,18 @@
+:root {
+  --primary-color: #6990f2;
+  --success: #e6ffe8;
+  --error: #ffe6e7;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins";
+  font-family: 'Poppins';
 }
 
 body {
-  background-color: #6990f2;
+  background-color: var(--primary-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,10 +28,10 @@ body {
 
 ::selection {
   color: #fff;
-  background: #6990f2;
+  background: var(--primary-color);
 }
 
-.wrapper {
+.file_uploader {
   width: 430px;
   background-color: #fff;
   border-radius: 5px;
@@ -33,116 +39,9 @@ body {
   box-shadow: 7px 7px 12px rgba(0, 0, 0, 0.5);
 }
 
-.wrapper header {
-  color: #6990f2;
+.file_uploader header {
+  color: var(--primary-color);
   font-size: 27px;
   font-weight: 500;
   text-align: center;
-}
-
-.wrapper form {
-  height: 167px;
-  display: flex;
-  cursor: pointer;
-  margin: 30px 0;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 6px;
-  border: 2px dashed #6990f2;
-}
-
-form :where(i, p) {
-  color: #6990f2;
-}
-form i {
-  font-size: 50px;
-}
-form p {
-  margin-top: 15px;
-  font-size: 16px;
-}
-
-section .row {
-  margin-bottom: 10px;
-  background: #e9f0ff;
-  list-style: none;
-  padding: 15px 20px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-section .row .icon__file {
-  color: #6990f2;
-  width: 32px;
-}
-
-section .details span {
-  font-size: 14px;
-}
-
-.progress-area .row .content {
-  width: 100%;
-  margin-left: 15px;
-}
-
-.progress-area .details {
-  display: flex;
-  align-items: center;
-  margin-bottom: 7px;
-  justify-content: space-between;
-}
-
-.progress-area .content .progress-bar {
-  height: 6px;
-  width: 100%;
-  margin-bottom: 4px;
-  background: #fff;
-  border-radius: 30px;
-}
-
-.content .progress-bar .progress {
-  height: 100%;
-  width: 0%;
-  background: #6990f2;
-  border-radius: inherit;
-}
-
-.uploaded-area {
-  max-height: 232px;
-  overflow-y: scroll;
-}
-
-.uploaded-area.onprogress {
-  max-height: 150px;
-}
-
-.uploaded-area::-webkit-scrollbar {
-  width: 0px;
-}
-
-.uploaded-area .row .content {
-  display: flex;
-  align-items: center;
-}
-
-.uploaded-area .row .details {
-  display: flex;
-  margin-left: 15px;
-  flex-direction: column;
-}
-
-.uploaded-area .row .details .size {
-  color: #404040;
-  font-size: 11px;
-}
-
-.uploaded-area i.fa-check {
-  font-size: 16px;
-}
-
-.icon__upload {
-  width: 2em;
 }
