--- a/frontend/src/fonts/font.css
+++ b/frontend/src/fonts/font.css
@@ -1,23 +1,23 @@
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Urbanist';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("./Poppins-Thin.ttf") format("truetype");
+  src: url('./Urbanist-Light.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Urbanist';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./Poppins-Regular.ttf") format("truetype");
+  src: url('./Urbanist-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Urbanist';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("./Poppins-Medium.ttf") format("truetype");
+  src: url('./Urbanist-Medium.ttf') format('truetype');
 }
